Arquivos que são adicionados ao gerar a gramática foram adicionados ao .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 __pycache__/
 __pycache__/*
 antlr-4.5.3-complete.jar
+Portugol.tokens
+PortugolLexer.py
+PortugolLexer.tokens
+PortugolListener.py
+PortugolParser.py
