--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 __pycache__/
 __pycache__/*
 antlr-4.5.3-complete.jar
+antlr-4.6-complete.jar
 Portugol.tokens
 PortugolLexer.py
 PortugolLexer.tokens
