--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 __pycache__/
 __pycache__/*
-antlr-4.5.3-complete.jar
-antlr-4.6-complete.jar
+antlr*
 Portugol.tokens
 PortugolLexer.py
 PortugolLexer.tokens
